# numlab

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: numlab.hpp
src/: main.cpp
src/integration/: integration.hpp  riemann.cpp
src/root_solver/: bisection.cpp  fixed_point.cpp  regula_falsi.cpp  root_solver.hpp
tests/: CMakeLists.txt
